--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
 		"@stripe/stripe-js": "^4.3.0",
 		"axios": "^1.7.5",
 		"framer-motion": "^11.3.30",
+		"link-react": "^3.0.0",
 		"lucide-react": "^0.435.0",
 		"react": "^18.3.1",
 		"react-confetti": "^6.1.0",
