--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"express": "^4.19.2",
 		"ioredis": "^5.4.1",
 		"jsonwebtoken": "^9.0.2",
+		"link-react": "^3.0.0",
 		"mongoose": "^8.5.3",
 		"react-icons": "^5.3.0",
 		"stripe": "^16.8.0"
